cargo-geiger/tests/snapshots/integration_tests__test8_package_with_build_rs_no_deps.stdout.snap
---
source: cargo-geiger/tests/integration_tests.rs
expression: stdout
---

Metric output format: x/y
    x = unsafe code used by the build
    y = total unsafe code found in the crate

Symbols:
    :) = No `unsafe` usage found, declares #![forbid(unsafe_code)]
    ?  = No `unsafe` usage found, missing #![forbid(unsafe_code)]
    !  = `unsafe` usage found

Functions  Expressions  Impls  Traits  Methods  Dependency

0/0        0/0          0/0    0/0     0/0      ?  test8_package_with_build_rs_no_deps 0.1.0

0/0        0/0          0/0    0/0     0/0
